--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
         <p><em>Future Data Scientist</em></p>
         <p>
           I am <strong><em><a
-                href="https://www.google.com/search?q=cristiano+ronaldo+and+messi+face&bih=937&biw=1920&rlz=1C1CHBF_koCA889CA889&hl=en&sxsrf=ALeKk03F1BBOtT5bW4G2GLlTPd9ZvqOWBg:1587207823327&tbm=isch&source=iu&ictx=1&fir=4ypAPVhFrJ5WzM%253A%252Cf5BtbdIeGXLYkM%252C_&vet=1&usg=AI4_-kSXlFtUgWq707Q0yJpBWg5zILulmw&sa=X&ved=2ahUKEwjYy_nz6fHoAhVFY6wKHW3tCf8Q9QEwAHoECAcQFg#imgrc=4ypAPVhFrJ5WzM:">Cristano
-                Messi</a></em></strong> and I am going to be a data sceintist. I love Mocha!
+                href="https://bleacherreport.com/articles/2203152-lionel-messi-vs-cristiano-ronaldo-the-face-merge">
+                Cristano Messi</a></em></strong>
+                and I am going to be a data sceintist. I love Mocha!
           🐶🐶
         </p>
 
@@ -79,7 +80,7 @@
   </table>
   <br />
 
-<a href="contact-me.html">Contact Me</a>
+  <a href="contact-me.html">Contact Me</a>
 
 </body>
 
